--- a/index.html
+++ b/index.html
@@ -1,38 +1,44 @@
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet/less" type="text/css" href="styles/main.less" />
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.4.3/js/jquery.terminal.js"></script>
-    <script type="text/javascript" src="src/shell.js"></script>
-    <script type="text/javascript" src="src/cli.js"></script>
-  </head>
-  
-  <body>
-  
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet/less" type="text/css" href="styles/main.less" />
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.4.3/js/jquery.terminal.js"></script>
+  <script type="text/javascript" src="src/shell.js"></script>
+  <script type="text/javascript" src="src/cli.js"></script>
+</head>
+
+<body>
+
   <div class="terminal-window">
-    <header>
-      <div class="button red"></div>
-      <div class="button yellow"></div>
-      <div class="button green"></div>
-    </header>
+    <div class="title-bar">
+      <div class="button mini">
+        <div class="mini-icon"></div>
+      </div>
+      <div class="button maxi">
+        <div class="maxi-icon"></div>
+      </div>
+      <div class="button close"></div>
+    </div>
     <div id="terminal">
-      <p><span class="green">\[._.]/</span> - you're in codebytere's cli! type `help` to get started.</p>
-        <p class="hidden">
-          <span class="prompt">
-            <span class="root">root</span>
-            <span class="tick">❯</span>
-          </span>
-          <span contenteditable="true" class="input" spellcheck="false"></span>
-        </p>
+      <p><span class="green">\[._.]/ change</span> - you're in my cli! type `help` to get started.</p>
+      <p class="hidden">
+        <span class="prompt">
+          <span class="root">root</span>
+          <span class="tick">❯</span>
+        </span>
+        <span contenteditable="true" class="input" spellcheck="false"></span>
+      </p>
     </div>
   </div>
-  
+
   <div class="footer">
-    <p>© Shelley Vohr 2023</p>
-    <p> Made with ❤ and coffee</p>
-    <p>Site code can be found <a class="site-code" target="_blank" href="https://github.com/codebytere/codebytere.github.io">here</a></p>
+    <p>Raghav Goel 2023</p>
+    <p>Made with 💙 and ☕</p>
+    <p>Inspired from codebyte.re</p>
+    <!-- <p>Site code can be found <a class="site-code" target="_blank" href="">here</a></p> -->
   </div>
-  
-  </body>
+
+</body>
