--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,27 +1,22 @@
 <ul class='contact'>
   <li>
-    <a class='blue' target='_blank' href='https://github.com/codebytere'>
+    <a class='blue' target='_blank' href='https://github.com/raghav2130'>
       GitHub
     </a>
   </li>
   <li>
-    <a class='blue' target='_blank' href='https://www.messenger.com/t/shelley.vohr'>
-      Messenger
-    </a>
-  </li>
-  <li>
-    <a class='blue' target='_blank' href='https://www.linkedin.com/in/codebytere'>
+    <a class='blue' target='_blank' href='https://www.linkedin.com/raghav2130'>
       LinkedIn
     </a>
   </li>
   <li>
-    <a class='blue' target='_blank' href='https://www.twitter.com/codebytere'>
+    <a class='blue' target='_blank' href='https://www.twitter.com/'>
       Twitter
     </a>
   </li>
   <li>
-    <a class='blue' target='_blank' href='https://www.soundcloud.com/csvohr'>
-      SoundCloud
+    <a class='blue' target='_blank' href='mailto:crown.rg7244@gmail.com'>
+      Gmail
     </a>
   </li>
 </ul>
