--- a/pages/help.html
+++ b/pages/help.html
@@ -1,10 +1,12 @@
 <div>
+  # Directories are shown in
+  <span class="green">'green'</span> while text files are shown in <span class="gray">'gray'</span> 
   <ul>
-    <li><strong>path</strong> - display current directory</li>
-    <li><strong>cat FILENAME</strong> - display FILENAME in window</li>
-    <li><strong>cd DIRECTORY</strong> - move into DIRECTORY or just cd to return to root</li>
-    <li><strong>ls</strong> - show files in current directory</li>
-    <li><strong>history</strong> - see your command history</li>
-    <li><strong>clear</strong> - clear current window</li>
+    <li><strong>path</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp - display current directory</li>
+    <li><strong>cat FILENAME</strong> &nbsp - display FILENAME in window</li>
+    <li><strong>cd DIRECTORY</strong> &nbsp - move into DIRECTORY or just cd to return to root</li>
+    <li><strong>ls</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp - show files in current directory</li>
+    <li><strong>history</strong>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp - see your command history</li>
+    <li><strong>clear</strong>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp - clear current window</li>
   </ul>
 </div>
