--- a/pages/root.html
+++ b/pages/root.html
@@ -1,12 +1,9 @@
 <p>
-  about.txt
+  <span class='gray'>about</span>
   &nbsp&nbsp
   <span class='dir'>skills</span>
   &nbsp&nbsp
-  contact.txt
-  <br>
-  resume.txt
+  <span class='gray'>contact</span>
   &nbsp&nbsp
-  talks.txt
-  <br>
+  <span class='gray'>resume</span>
 </p>
