--- a/pages/about.html
+++ b/pages/about.html
@@ -1,3 +1,4 @@
 <p>
-  I'm a primarily backend software engineer based in San Francisco, CA!<br> <br> Passionate about clean code, running, exploring, morning crosswords, and learning any and everything that happens to come my way. <br> <br> I work as a core engineer on the Electron javascript framework team at Microsoft 😀
+  I'm a primarily Front End software engineer based in India.<br>
+  <br>Passionate about clean code, bash scripts, python<br>
 </p>
