--- a/pages/familiar.html
+++ b/pages/familiar.html
@@ -1,4 +1,6 @@
 <ul>
-  <li>React</li>
-  <li>Sketch</li>
+  <li>Go lang</li>
+  <li>Graphic Designing</li>
+  <li>Video Editing</li>
+  <li>Linux</li>
 </ul>
