--- a/pages/proficient.html
+++ b/pages/proficient.html
@@ -1,9 +1,9 @@
 <ul>
-  <li>Javascript</li>
+  Proficient in : <br>
   <li>C++</li>
-  <li>Objective-C</li>
   <li>Python</li>
   <li>HTML5/CSS3</li>
+  <li>Javascript</li>
   <li>Bash</li>
   <li>Git</li>
 </ul>
