--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,12 +5,12 @@
     </a>
   </li>
   <li>
-    <a class='blue' target='_blank' href='https://www.linkedin.com/raghav2130'>
+    <a class='blue' target='_blank' href='https://www.linkedin.com/in/raghav2130/'>
       LinkedIn
     </a>
   </li>
   <li>
-    <a class='blue' target='_blank' href='https://www.twitter.com/'>
+    <a class='blue' target='_blank' href='https://twitter.com/SubconciousgoeL'>
       Twitter
     </a>
   </li>
