--- a/pages/proficient.html
+++ b/pages/proficient.html
@@ -1,9 +1,12 @@
-<ul>
-  Proficient in : <br>
-  <li>C++</li>
-  <li>Python</li>
-  <li>HTML5/CSS3</li>
-  <li>Javascript</li>
-  <li>Bash</li>
-  <li>Git</li>
-</ul>
+<p>
+  &nbsp Proficient in : <br>
+  <ul>
+    <li>C++</li>
+    <li>Python</li>
+    <li>HTML5/CSS3</li>
+    <li>Javascript</li>
+    <li>Bash</li>
+    <li>Git</li>
+  </ul>
+</p>
+  
