--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
   <link rel="stylesheet/less" type="text/css" href="styles/main.less" />
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.4.3/js/jquery.terminal.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.4.3/js/jquery.terminal.js"></script>
   <script type="text/javascript" src="src/shell.js"></script>
   <script type="text/javascript" src="src/cli.js"></script>
 </head>
-
 <body>
-
   <div class="terminal-window">
     <div class="title-bar">
       <div class="button mini">
@@ -20,7 +17,9 @@
       <div class="button maxi">
         <div class="maxi-icon"></div>
       </div>
-      <div class="button close"></div>
+      <div class="button close">
+        <div class="close-icon"></div>
+      </div>
     </div>
     <div id="terminal">
       <p><span class="green">\[._.]/ change</span> - you're in my cli! type `help` to get started.</p>
@@ -33,12 +32,11 @@
       </p>
     </div>
   </div>
-
   <div class="footer">
     <p>Raghav Goel 2023</p>
     <p>Made with 💙 and ☕</p>
-    <p>Inspired from codebyte.re</p>
-    <!-- <p>Site code can be found <a class="site-code" target="_blank" href="">here</a></p> -->
+    <p>Inspired from <a class="site-code" target="_blank" href="https://codebyte.re">codebyte.re</a></p>
+    <p>Site code can be found <a class="site-code" target="_blank" href="https://github.com/raghav2130/Termi-portfolio">here</a></p>
   </div>
 
 </body>
