cat-and-data-updated

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,9 +14,12 @@
       Twitter
     </a>
   </li>
-  <li>
-    <a class='blue' target='_blank' href='mailto:crown.rg7244@gmail.com'>
-      Gmail
-    </a>
+  <li class="center">
+    Gmail : crown.rg7244@gmail.com
   </li>
+  <style>
+    .center{
+      text-align: center;
+    }
+  </style>
 </ul>
