--- a/pages/help.html
+++ b/pages/help.html
@@ -1,6 +1,6 @@
 <div>
-  # Directories are shown in
-  <span class="green">'green'</span> while text files are shown in <span class="gray">'gray'</span> 
+  &nbsp # Directories are in<span class="green">'green'</span> 
+  &nbsp # while text files are in <span class="gray">'gray'</span> 
   <ul>
     <li><strong>path</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp - display current directory</li>
     <li><strong>cat FILENAME</strong> &nbsp - display FILENAME in window</li>
