--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,5 @@
-<p>
+<p><br>
   I'm a primarily Front End software engineer based in India.<br>
-  <br>Passionate about clean code, bash scripts, python<br>
+  Passionate about clean code, bash scripts, python<br>
+  <br>
 </p>
