--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,7 @@
 <p><br>
-  I'm a primarily Front End software engineer based in India.<br>
-  Passionate about clean code, bash scripts, python<br>
+  I'm Front End Developer based in India.<br>
+  Passionate about bash scripts and python<br>
+  
+  Loves Pani puri 🤤<br>
   <br>
 </p>
