--- a/pages/skills.html
+++ b/pages/skills.html
@@ -1,3 +1,6 @@
 <p>
-  proficient &nbsp&nbsp familiar
+  &nbsp&nbsp
+  <span class='gray'>proficient</span>
+  &nbsp&nbsp
+  <span class='gray'>familiar</span>
 </p>
