--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div id="terminal">
-      <p><span class="green">\[._.]/ change</span> - you're in my cli! type `help` to get started.</p>
+      <p><span class="green">(●'◡'●) Hi</span> - you're in my raghav's cli! type `help` to get started.</p>
       <p class="hidden">
         <span class="prompt">
           <span class="root">root</span>
