--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
     </div>
   </div>
   <div class="footer">
-    <p>Raghav Goel 2023</p>
+    <p>Raghav Goel @2023</p>
     <p>Made with 💙 and ☕</p>
-    <p>Inspired from <a class="site-code" target="_blank" href="https://codebyte.re">codebyte.re</a></p>
     <p>Site code can be found <a class="site-code" target="_blank" href="https://github.com/raghav2130/Termi-portfolio">here</a></p>
   </div>
 
